Refactor ExtractionCheckCommand and GitHub integration - Added a check in ExtractionCheckCommand to prevent simultaneous use of SARIF file generation and inline review comments. - Updated GithubReviewCommentService to change configuration property names for extracted comments and line number error allowance. - Removed unused ReviewCommentUtils class. - Enhanced ExtractionCheckCommandTest with tests for mutual exclusivity of SARIF and inline review comments. - Improved ExtractionCheckNotificationSenderGithubTest to validate inline review comments handling. - Added new tests in GithubClientTest to ensure proper handling of duplicate review comments and integration with GitHub API. - Implemented logic in GithubClient to skip posting duplicate review comments based on existing comments in pull requests.